<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- search_page strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="what_are_you_looking_for___string">What are you looking for ?</string>
	<string name="shop_logo_string">SHOPLOGO</string>
	<string name="cart_logo_string">CARTLOGO</string>
	<string name="my_order_string">MY ORDER</string>
	<string name="account_logo_string">Accountlogo</string>
	<string name="milk_string">Milk</string>
	<string name="vegetables_string">Vegetables</string>
	<string name="meat_string">Meat</string>
	<string name="fruits_string">Fruits</string>
	<string name="bread_string">Bread</string>
	<string name="seafood_string">Seafood</string>
	<string name="stores_string">Stores </string>
	<string name="a___shop_kolkata_newtown_1a_location__string"> A . SHOP Kolkata Newtown 1A(location)</string>
	<string name="a___shop_kolkata_newtown_1a_location__ek1_string"> A . SHOP Kolkata Newtown 1A(location)</string>
	<string name="search_ek1_string">Search</string>
	<string name="welcome_to_grocery_store_string">Welcome to Grocery Store</string>
	<string name="_1__always_stocked_for_your_needs__2__we_focus_on_what_you_need__3__grocery_shopping_has_never_been_this_fun__string">1. Always stocked for your needs. 2.We focus on what you need. 3. Grocery shopping has never been this fun!</string>
	<string name="customer_string">CUSTOMER</string>
	<string name="seller_string">SELLER</string>
	<string name="or_string">OR</string>
	<string name="terms_of_use_and_privacy_policy_string">Terms of Use and Privacy Policy</string>
	<string name="enter_store_id_string">Enter Store ID</string>
	<string name="enter_your_password_string">Enter Your Password</string>
	<string name="or_ek1_string">OR</string>
	<string name="log_in_string">Log in</string>
	<string name="continue_string">Continue</string>
	<string name="terms_of_use_and_privacy_policy_ek1_string">Terms of Use and Privacy Policy</string>
	<string name="welcome_to_grocery_store_ek1_string">Welcome to Grocery Store</string>
	<string name="login_string">LOGIN</string>
	<string name="_signup_string">SIGNUP</string>
	<string name="or_ek2_string">OR</string>
	<string name="terms_of_use_and_privacy_policy_ek2_string">Terms of Use and Privacy Policy</string>
	<string name="_1__always_stocked_for_your_needs__2__we_focus_on_what_you_need__3__grocery_shopping_has_never_been_this_fun__ek1_string">1. Always stocked for your needs. 2.We focus on what you need. 3. Grocery shopping has never been this fun!</string>
	<string name="welcome_to_grocery_store_ek2_string">Welcome to Grocery Store</string>
	<string name="login_ek1_string">LOGIN</string>
	<string name="signup_ek1_string">SIGNUP</string>
	<string name="or_ek3_string">OR</string>
	<string name="terms_of_use_and_privacy_policy_ek3_string">Terms of Use and Privacy Policy</string>
	<string name="_1__always_stocked_for_your_needs__2__we_focus_on_what_you_need__3__grocery_shopping_has_never_been_this_fun__ek2_string">1. Always stocked for your needs. 2.We focus on what you need. 3. Grocery shopping has never been this fun!</string>
	<string name="customer_signup_string">Customer SignUP</string>
	<string name="enter_your_name_string">Enter Your Name</string>
	<string name="enter_your_email_id_string">Enter Your Email-Id</string>
	<string name="enter_your_mobile_number_string">Enter Your Mobile Number</string>
	<string name="enter_your_password_ek1_string">Enter Your Password</string>
	<string name="terms_of_use_and_privacy_policy_ek4_string">Terms of Use and Privacy Policy</string>
	<string name="sign_up_string">Sign up</string>
	<string name="seller_signup_ek3_string">Seller SignUp</string>
	<string name="shop_name_string">Shop Name</string>
	<string name="upload_your_trade_license_string">Upload Your Trade License</string>
	<string name="sign_up_ek1_string">Sign up</string>
	<string name="enter_your_address_string">Enter Your Address</string>
	<string name="creat_your_password_string">Creat Your Password</string>
	<string name="_____string">...</string>
	<string name="terms_of_use_and_privacy_policy_ek5_string">Terms of Use and Privacy Policy</string>
	<string name="___string">?</string>
	<string name="bengali_shop_string">Bengali Shop</string>
	<string name="town_shop_string">Town Shop</string>
	<string name="search_ek3_string">Search</string>
	<string name="meat_ek1_string">MEAT</string>
	<string name="_1__string">1.</string>
	<string name="_2__string">2.</string>
	<string name="_3__string">3.</string>
	<string name="bihari_shop_string">Bihari Shop</string>
	<string name="___ek1_string">?</string>
	<string name="price___230___string">PRICE : 230/-</string>
	<string name="price__225___string">PRICE: 225/-</string>
	<string name="last_updated__today_string">Last Updated: Today </string>
	<string name="last_updated__today_ek1_string">Last Updated: Today </string>
	<string name="last_updated__yesterday_string">Last Updated: Yesterday </string>
	<string name="___ek2_string">?</string>
	<string name="price__245___string">PRICE: 245/-</string>
	<string name="total_feedback_recived_string">Total FeedBack Recived</string>
	<string name="_5k__active_last_8_months__string">5K+(ACTIVE LAST 8 months)</string>
	<string name="location__utsa_condoville_luxury__street_number_45__ag_block__newtown___kolkata___00156_string">LOCATION:Utsa Condoville Luxury, Street Number 45, AG Block (Newtown), Kolkata, &amp;00156</string>
	<string name="reliance_fresh_string">Reliance Fresh</string>
	<string name="_4_4_string">4.4</string>
	<string name="top_buys__string">TOP BUYS:</string>
	<string name="potato_string">POTATO</string>
	<string name="tomato_string">TOMATO</string>
	<string name="onion_string">ONION</string>
	<string name="potato_ek1_string">Potato</string>
	<string name="roy_potato_shop__string">Roy Potato Shop</string>
	<string name="roy_potato_shop__ek1_string">Roy Potato Shop</string>
	<string name="potato_onion_garlic_string">Potato,Onion,Garlic</string>
	<string name="_4_4_ek1_string">4.4</string>
	<string name="_25_per_kg_string">25 Per Kg</string>
	<string name="desi_potato_shop__string">Desi Potato Shop</string>
	<string name="potato_onion_garlic_ek1_string">Potato,Onion,Garlic</string>
	<string name="_4_0_string">4.0</string>
	<string name="_25_per_kg_ek1_string">25 Per Kg</string>
	<string name="_3_9_string">3.9</string>
	<string name="_28_per_kg_string">28 Per Kg</string>
	<string name="reliance_fress_string">Reliance Fress</string>
	<string name="potato_onion_garlic_ek2_string">Potato,Onion,Garlic</string>
	<string name="more_string">More</string>
	<string name="search_ek5_string">Search</string>
	<string name="bihari_shop_ek1_string">Bihari Shop</string>
	<string name="_245_reviews_active_for_last_5_months__string">245 Reviews,Active for last 5 months.</string>
	<string name="location__cb_228_axis_mall_new_town__string">Location: CB-228,Axis Mall,New Town.</string>
	<string name="chicken_string">CHICKEN </string>
	<string name="__230_kg_string">230/kg</string>
	<string name="_bought_anything_from_here__string">BOUGHT ANYTHING FROM HERE?</string>
	<string name="__150_tray_string">150/tray</string>
	<string name="__45_packet_string">45/packet</string>
	<string name="mutton_string">MUTTON </string>
	<string name="egg_string">EGG</string>
	<string name="__750_kg_string">750/kg</string>
	<string name="bread_ek1_string">BREAD</string>
	<string name="wrong_info___string">Wrong Info ?</string>
	<string name="wrong_info___ek1_string">Wrong Info ?</string>
	<string name="wrong_info___ek2_string">Wrong Info ?</string>
	<string name="wrong_info___ek3_string">Wrong Info ?</string>
	<string name="search_ek7_string">Search</string>
	<string name="bihari_shop_ek2_string">Bihari Shop</string>
	<string name="_2k_reviews_active_for_last_5_months__string">2K Reviews,Active for last 5 months.</string>
	<string name="location__cb_228_axis_mall_new_town__ek1_string">Location: CB-228,Axis Mall,New Town.</string>
	<string name="__product_string">*PRODUCT</string>
	<string name="__price__kg__string">*PRICE(/kg)</string>
	<string name="any_review_string">ANY REVIEW</string>
	<string name="submit_string">SUBMIT</string>
	<string name="upload_recipt_or_payment_ss_string">UPLOAD RECIPT OR PAYMENT SS</string>
	<string name="search_ek9_string">Search</string>
	<string name="total_contributions_given___170_string">TOTAL CONTRIBUTIONS GIVEN : 170</string>
	<string name="_207_1_points_string">207+1  points</string>
	<string name="__1_non_recipt_buy__string">+1(NON-RECIPT BUY)</string>
	<string name="rahul_kumar_string">RAHUL KUMAR</string>
	<string name="thanks_for_your_contribution__string">THANKS FOR YOUR CONTRIBUTION!</string>
	<string name="provide_recipt_or_payment_ss_to_get_points__7___string">PROVIDE RECIPT OR PAYMENT SS TO GET POINTS(+7). </string>
	<string name="return_home_string">RETURN HOME</string>
	<string name="___add_details___shop_name___shop_address___owner_name___pan_adhaar___trade_license___owner_email___owner_phone___captcha___string">--Add details--Shop Name--Shop address--Owner Name--Pan/Adhaar--Trade License--Owner email--Owner phone--Captcha()</string>
</resources>